--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ html {
         </div>
         <div class="cont3text">
             <h1>Waitlist</h1>
-            <p>This is still in development. if your would like to be notified when subdomains become available, send an email to fiatmining247@gmail.com with the subject 'waitlist'</p>
+            <p>This is still in development. If you would like to be notified when subdomains become available, send an email to fiatmining247@gmail.com with the subject 'waitlist'</p>
         </div>
     </div>
     <div class="container4">
@@ -182,7 +182,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
         </div>
         <div class="cont4text">
             <h1>Are you a developer?</h1>
-            <p>we are in need of web devs to help in our next phase. if youre interested send an email to fiatmining247@gmail.com</p>
+            <p>We are in need of web devs to help in our next phase. If youre interested send an email to fiatmining247@gmail.com</p>
         </div>
     </div>
 <body>
