--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>sndBTC</title>
+<link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/s5pnrYN.png">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <style type="text/css" media="screen">
 /* Google Fonts */
